--- a/CarShop/CarShop/Views/Admin/Index.cshtml
+++ b/CarShop/CarShop/Views/Admin/Index.cshtml
@@ -5,6 +5,8 @@
 @{
 }
 
+<h3>Hello, @User.Identity.Name</h3>
+
 <a href="~/Admin/Create" class="btn btn-primary">Create</a>
 
 <table class="table">
