--- a/CarShop/CarShop/Views/Shared/_Layout.cshtml
+++ b/CarShop/CarShop/Views/Shared/_Layout.cshtml
@@ -24,7 +24,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                       
                     </ul>
+                </div>
+                <div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <span>@User.Identity.Name</span>
+                        <form asp-controller="Account" asp-action="Logout" method="post">
+                            <button type="submit" class="btn btn-outline-dark">Logout</button>
+                        </form>
+                    }
                 </div>
             </div>
         </nav>
