--- a/CarShop/CarShop/Views/Account/Login.cshtml
+++ b/CarShop/CarShop/Views/Account/Login.cshtml
@@ -21,6 +21,10 @@
             @Html.PasswordFor(x => x.Password)
             @Html.ValidationMessageFor(x => x.Password)
         </div>
+        <div>
+            @Html.LabelFor(x => x.RememberMe)
+            @Html.CheckBoxFor(x => x.RememberMe)
+        </div>
         <input type="submit" value="Login" class="btn btn-warning" />
     </div>
 </form> 
