--- a/CarShop/CarShop/Views/Account/Register.cshtml
+++ b/CarShop/CarShop/Views/Account/Register.cshtml
@@ -21,6 +21,11 @@
             @Html.ValidationMessageFor(x => x.Password)
         </div>
         <div>
+            @Html.LabelFor(x => x.Year)
+            @Html.TextBoxFor(x => x.Year)
+            @Html.ValidationMessageFor(x => x.Year)
+        </div>
+        <div>
             @Html.LabelFor(x => x.ConfirmPassword)
             @Html.PasswordFor(x => x.ConfirmPassword)
             @Html.ValidationMessageFor(x => x.ConfirmPassword)
